RESOLVED FIXED315010
http/tests/webrtc/filtering-ice-candidate-same-origin-frame.html is flaky on DEBUG bots
https://bugs.webkit.org/show_bug.cgi?id=315010
Summary http/tests/webrtc/filtering-ice-candidate-same-origin-frame.html is flaky on ...
youenn fablet
Reported 2026-05-18 04:06:44 PDT
http/tests/webrtc/filtering-ice-candidate-same-origin-frame.html is flaky on DEBUG bots
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-18 04:06:54 PDT
youenn fablet
Comment 2 2026-05-18 04:10:04 PDT
EWS
Comment 3 2026-05-18 09:33:17 PDT
Committed 313420@main (7a310eed9feb): <https://commits.webkit.org/313420@main> Reviewed commits have been landed. Closing PR #65099 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.