http/tests/webrtc/filtering-ice-candidate-same-origin-frame.html is flaky on DEBUG bots rdar://177334197 https://bugs.webkit.org/show_bug.cgi?id=315010

Reviewed by Eric Carlson.

We switch from a concurrent to a serial queue so that we are sure that the getInterfaceName callback is not called in parrallel.
This ensures that we only resolve the native promise once.

Canonical link: https://commits.webkit.org/313420@main